remove overflow hidden to fix pywebview

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,13 +1,12 @@
 body,
 p {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
   height: 100%;
   width: 100%;
 }
